# CTBFashionBot

./: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: tests.yml
src/: main.py
src/config/: base.py  env.py
src/services/: access_control.py  audit_repo.py  inspire_service.py  llm_service.py  query_service.py  schema_service.py  sql_guard.py
src/utils/: db_utils.py  format.py  profanity.py  responses.py  sanitize.py  smalltalk.py  text_utils.py
tests/: test_access_control.py  test_audit_repo.py  test_config.py  test_format.py  test_listing_limits.py  test_llm_errors.py  test_llm_service.py  test_main_helpers.py  test_profanity.py  test_sanitize.py  test_smalltalk.py  test_sql_guard.py  test_text_utils.py
